@@ -1,7 +1,7 @@
 /*
  * MIDI streaming music support using Timidity library.
  *
- * libTiMidity v0.2.0 or newer required:
+ * libTiMidity v0.2.0 or newer needed
  * https://sf.net/p/libtimidity/ (local copy included under libs/)
  *
  * Copyright (C) 2010-2015 O.Sezer <sezero@users.sourceforge.net>
@@ -89,29 +89,6 @@ static const char *cfgfile[] = {
 	NULL /* last entry must be NULL */
 };
 
-#if defined(TIMIDITY_USE_DLS)
-/* DLS testing: not good enough yet */
-static MidDLSPatches *dlspat = NULL;
-
-static int S_TIMIDITY_InitDLS (const char *dlsname)
-{
-	MidIStream *f;
-
-	f = mid_istream_open_file(dlsname);
-	if (!f) return -1;
-
-	if (mid_init_no_config() != 0)
-		return -1; /* nomem! */
-
-	dlspat = mid_dlspatches_load(f);
-	mid_istream_close(f);
-	if (dlspat) return 0;
-
-	mid_exit ();
-	return -1;
-}
-#endif /* TIMIDITY_USE_DLS */
-
 static int TIMIDITY_InitHelper (const char *cfgdir)
 {
 	char path[MAX_OSPATH];
@@ -139,15 +116,6 @@ static qboolean S_TIMIDITY_CodecInitialize (void)
 
 	if (timidity_codec.initialized)
 		return true;
-
-#if defined(TIMIDITY_USE_DLS) /* DLS testing */
-	if (S_TIMIDITY_InitDLS("gm.dls") == 0)
-	{
-		Con_Printf("Timidity: using DLS\n");
-		timidity_codec.initialized = true;
-		return true;
-	}
-#endif /* TIMIDITY_USE_DLS */
 
 	err = -1;
 	timi_env = getenv("TIMIDITY_CFG");
@@ -189,10 +157,6 @@ static void S_TIMIDITY_CodecShutdown (void)
 		return;
 	timidity_codec.initialized = false;
 	Con_Printf("Shutting down Timidity.\n");
-#if defined(TIMIDITY_USE_DLS)
-	mid_dlspatches_free (dlspat);
-	dlspat = NULL;
-#endif
 	mid_exit ();
 }
 
@@ -226,11 +190,7 @@ static qboolean S_TIMIDITY_CodecOpenStream (snd_stream_t *stream)
 		return false;
 	}
 	data = (midi_buf_t *) Z_Malloc(sizeof(midi_buf_t), Z_MAINZONE);
-#if defined(TIMIDITY_USE_DLS)
-	data->song = mid_song_load_dls (midistream, dlspat, &options);
-#else
 	data->song = mid_song_load (midistream, &options);
-#endif
 	mid_istream_close (midistream);
 	if (data->song == NULL)
 	{
