@@ -44,15 +44,6 @@ endif
 #CFLAGS += -DTIMIDITY_DEBUG
 INCLUDES = -I. -I$(UHEXEN2_SHARED)
 
-# include DLS instruments support? (no: the DLS code we inherited from
-# SDL_sound isn't good enough, nor is it used on unices where timidity
-# is normally needed, either.)
-USE_DLS = no
-
-ifeq ($(USE_DLS),yes)
-CFLAGS += -DTIMIDITY_USE_DLS
-endif
-
 ifeq ($(TARGET_OS),darwin)
 CPUFLAGS=
 # require 10.5 for 64 bit builds
@@ -93,7 +84,6 @@ TARGETS:= libtimidity.a
 
 OBJECTS = common.o \
 	instrum.o \
-	instrum_dls.o \
 	mix.o \
 	output.o \
 	playmidi.o \
@@ -116,8 +106,7 @@ all: $(TARGETS)
 
 # object dependencies:
 common.o: common.c common.h timidity_internal.h
-instrum.o: instrum.c common.h instrum.h instrum_dls.h resample.h tables.h timidity_internal.h
-instrum_dls.o: instrum_dls.c common.h dls_compat.h dls1.h dls2.h instrum.h instrum_dls.h tables.h timidity_internal.h
+instrum.o: instrum.c common.h instrum.h resample.h tables.h timidity_internal.h
 mix.o: mix.c instrum.h mix.h output.h playmidi.h resample.h tables.h timidity_internal.h
 output.o: output.c output.h timidity_internal.h
 playmidi.o: playmidi.c instrum.h mix.h output.h playmidi.h tables.h timidity_internal.h
