@@ -3,11 +3,8 @@
 ifdef DEBUG
 TIMIDITY_BUILD = DEBUG=yes
 endif
-ifeq ($(TIMIDITY_USE_DLS),)
-TIMIDITY_USE_DLS=no
-endif
 $(LIBS_DIR)/timidity/timidity.lib:
-	$(MAKE) -C $(LIBS_DIR)/timidity -f Makefile.vbcc $(TIMIDITY_BUILD) USE_DLS="$(TIMIDITY_USE_DLS)" CC="$(CC)"
+	$(MAKE) -C $(LIBS_DIR)/timidity -f Makefile.vbcc $(TIMIDITY_BUILD) CC="$(CC)"
 
 timi_clean:
 	$(MAKE) -C $(LIBS_DIR)/timidity -f Makefile.vbcc clean
